--- a/开发手册.md
+++ b/开发手册.md
@@ -1,6 +1,6 @@
 # 开发手册
 
-简述：本手册旨在记录一些平时开发、调试遇到的问题，供后续队员更快地学习；现役队员可记录平时遇到的问题以及解决方法；退役队员也可以记录工作中遇到的工程问题以及解决的思路，给他人提供灵感；
+简述：本手册旨在记录一些平时开发、调试遇到的普遍性问题和可行性解决方案，供后续队员更快地学习，减少试错时间。
 
 
 
