--- a/卡尔曼滤波学习.md
+++ b/卡尔曼滤波学习.md
@@ -45,7 +45,9 @@ $$
 
 P~t~表示位置，v~t~表示速度。同时外加一控制量u~t~，表示加速度。
 
-设P~t-1~为上一时刻的位置，如果想通过上一时刻的位置来预测这一时刻的位置，可以使用公式$x=x_0+v_0\Delta t+\frac{1}{2}at^2$，即
+设P~t-1~为上一时刻的位置，如果想通过上一时刻的位置来预测这一时刻的位置，可以使用公式
+$x=x_0+v_0\Delta t+\frac{1}{2}at^2$
+，即
 
 $$
 P_t = P_t-1+v_{t-1}\Delta t+\frac{1}{2}u_t{\Delta t}^2\\
@@ -83,13 +85,17 @@ $$
 状态预测公式：\hat{x_t}^- = F_t\hat{x_{t-1}}+B_tu_t
 $$
 
-这就是**状态预测公式**。其中$F_t = \left|\begin{matrix}
+这就是**状态预测公式**。其中
+$F_t = \left|\begin{matrix}
 1&\Delta t\\
 0&1
-\end{matrix}\right|$叫做状态转移矩阵，它表示我们如何从上一时刻的状态推测这一时刻的状态。$B_t=\left|\begin{matrix}
+\end{matrix}\right|$
+叫做状态转移矩阵，它表示我们如何从上一时刻的状态推测这一时刻的状态。
+$B_t=\left|\begin{matrix}
 \frac{{\Delta t}^2}{2}\\
 \Delta t
-\end{matrix}\right|$叫做控制矩阵，他表示控制量$u$如何作用于当前状态。其中$\hat{x_t}^-$表示估计量，减号角标表示由上一时刻预测而来。
+\end{matrix}\right|$
+叫做控制矩阵，他表示控制量$u$如何作用于当前状态。其中$\hat{x_t}^-$表示估计量，减号角标表示由上一时刻预测而来。
 
 然而，预测是有噪声的，也就是不可控的随机性因素，这会随机扰乱我们的预测结果。我们需要**协方差矩阵**来修正。它是有关不确定性的表述。
 
