--- a/卡尔曼滤波学习.md
+++ b/卡尔曼滤波学习.md
@@ -57,6 +57,15 @@ $$
 由于是线性关系，可以写成矩阵形式：
 
 $$
+cov(x,x) = 
+\left|\begin{matrix}
+\sigma_{11}&\sigma_{12}\\
+\sigma_{12}&\sigma_{22}
+\end{matrix}\right|
+$$
+
+$$
+
 状态转移方程：
 \left|\begin{matrix}
 P_t\\
