--- a/卡尔曼滤波学习.md
+++ b/卡尔曼滤波学习.md
@@ -56,22 +56,17 @@ $$
 
 由于是线性关系，可以写成矩阵形式：
 
-$$
-cov(x,x) = 
-\left|\begin{matrix}
-\sigma_{11}&\sigma_{12}\\
-\sigma_{12}&\sigma_{22}
-\end{matrix}\right|
-$$
+
 
 $$
 
-状态转移方程：
 \left|\begin{matrix}
 P_t\\
 v_t
-\end{matrix}\right|
+\end{matrix}\right|\
+
 =
+
 \left|\begin{matrix}
 1&\Delta t\\
 0&1
@@ -79,8 +74,10 @@ v_t
 \left|\begin{matrix}
 P_{t-1}\\
 v_{t-1}
-\end{matrix}\right|
+\end{matrix}\right|\
+
 +
+
 \left|\begin{matrix}
 \frac{{\Delta t}^2}{2}\\
 \Delta t
