--- a/卡尔曼滤波学习.md
+++ b/卡尔曼滤波学习.md
@@ -59,14 +59,12 @@ $$
 
 
 $$
-
+状态转移方程：
 \left|\begin{matrix}
 P_t\\
 v_t
-\end{matrix}\right|\
-
+\end{matrix}\right|
 =
-
 \left|\begin{matrix}
 1&\Delta t\\
 0&1
@@ -74,10 +72,8 @@ v_t
 \left|\begin{matrix}
 P_{t-1}\\
 v_{t-1}
-\end{matrix}\right|\
-
+\end{matrix}\right|
 +
-
 \left|\begin{matrix}
 \frac{{\Delta t}^2}{2}\\
 \Delta t
