--- a/卡尔曼滤波学习.md
+++ b/卡尔曼滤波学习.md
@@ -88,15 +88,15 @@ $$
 $$
 
 这就是**状态预测公式**。其中
-$F_t = \left|\begin{matrix}
+$$F_t = \left|\begin{matrix}
 1&\Delta t\\
 0&1
-\end{matrix}\right|$
+\end{matrix}\right|$$
 叫做状态转移矩阵，它表示我们如何从上一时刻的状态推测这一时刻的状态。
-$B_t=\left|\begin{matrix}
+$$B_t=\left|\begin{matrix}
 \frac{{\Delta t}^2}{2}\\
 \Delta t
-\end{matrix}\right|$
+\end{matrix}\right|$$
 叫做控制矩阵，他表示控制量$u$如何作用于当前状态。其中$\hat{x_t}^-$表示估计量，减号角标表示由上一时刻预测而来。
 
 然而，预测是有噪声的，也就是不可控的随机性因素，这会随机扰乱我们的预测结果。我们需要**协方差矩阵**来修正。它是有关不确定性的表述。
